public/styles/main.css
*, *:before, *:after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "Source Code Pro", sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
}

@media (max-width: 750px) {
  html {
    font-size: 6px;
  }
}

.page {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.me_figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin: 0;
}

.me_pic {
  width: 20%;
  clip-path: circle(50% at 50%);
}

@media (max-width: 750px) {
  .me_pic  {
    width: 40%;
  }
}

.me_figcaption {
  margin-top: 3rem;
  text-align: center;
  font-family: 'Source Code Pro', monospace;
  font-size: 3rem;
  font-weight: 600;
}

@media (max-width: 750px) {
  .me_figcaption  {
    margin-bottom: 1rem;
  }
}

.me_job {
  display: block;
  margin-top: 10px;
  text-align: center;
  font-family: 'Space Mono', monospace;
  font-size: 2rem;
  font-weight: 200;
}

@media (max-width: 750px) {
  .me_job {
    font-size: 2.5rem;
  }
}

.contact_socials {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  list-style-type: none;
  padding-left: 0;
}

.contact_social {
  display: inline-block;
  margin-right: 10px;
  opacity: 0.2;
}

.contact_social:last-child {
  margin-right: 0;
}

.contact_social:hover {
  opacity: 0.6;
  transition: all 0.5s ease-out;
}

.curriculum-vitae {
  display: block;
}

@media (max-width: 750px) {
  .curriculum-vitae  {
    display: none;
  }
}

.curriculum-vitae_figcaption {
  text-align: center;
}

